[package]
name = "obd2_reader"
version = "0.1.0"
edition = "2021"
description = "A Rust library for communicating with ELM327-compatible OBD-II adapters over serial"
license = "MIT"
keywords = ["obd2", "elm327", "serial", "automotive", "diagnostics"]
categories = ["hardware-support", "embedded"]

[dependencies]
serialport = "4.6"
thiserror = "2.0"

[dev-dependencies]
# For integration tests / examples only